# ReVision-Context

./: README.md  ReVision_Context_Codex_Segmented_Execution.md
codex_execution_pack/: .gitignore  AGENTS.md  CODEX_TASK_INDEX.md  README.md  pyproject.toml  requirements.txt
codex_execution_pack/codex_tasks/: TASK_00_PROJECT_BOOTSTRAP.md  TASK_01_PHASE0_RENDER_MAPPING_SYNTHETIC.md  TASK_02_PHASE1_HEURISTIC_HYBRID.md  TASK_03_PHASE2_FIDBENCH_EVALUATOR.md  TASK_04_PHASE3_TRAINABLE_ALLOCATOR.md  TASK_05_PHASE4_ALIGNMENT_RISK.md  TASK_06_PHASE5_BASELINES_EXPERIMENTS.md  TASK_07_RELEASE_AND_PAPER_ASSETS.md
codex_execution_pack/data/synthetic/: tiny_exactness.jsonl
codex_execution_pack/docs/: research_plan.md
codex_execution_pack/outputs/hybrid_smoke/: render_diagnostics.json  results.jsonl  summary.json
codex_execution_pack/outputs/render_smoke/: diagnostics.json
codex_execution_pack/prompts/: RUN_00_BOOTSTRAP.txt  RUN_01_PHASE0.txt  RUN_02_PHASE1.txt  RUN_03_PHASE2.txt  RUN_04_PHASE3.txt  RUN_05_PHASE4.txt  RUN_06_PHASE5.txt  RUN_07_RELEASE.txt
codex_execution_pack/revision_context/: __init__.py  cli.py
codex_execution_pack/revision_context/allocator/: __init__.py  budget.py  heuristic_allocator.py
codex_execution_pack/revision_context/anchors/: __init__.py  query_overlap.py  regex_extractor.py  scorer.py  types.py
codex_execution_pack/scripts/: check_environment.py  clone_baselines.sh
codex_execution_pack/tests/: test_hybrid_cli.py  test_hybrid_components.py  test_renderer.py  test_smoke.py  test_synthetic_exactness.py
(+28 files in other folders)
