[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "revision-context"
version = "0.1.0"
description = "Bootstrap scaffold for ReVision-Context++."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["Pillow>=10.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
